force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Carryover_Factor__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Factor__c</fullName>
    <label>Carryover Factor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>