force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Consumes_Credit__c.field-meta.xml
<CustomField>
    <fullName>Consumes_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumes Credit</label>
    <type>Checkbox</type>
</CustomField>