force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Included_Usage__c.field-meta.xml
<CustomField>
    <fullName>Included_Usage__c</fullName>
    <label>Included Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>