force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Usage_Meter__c.field-meta.xml
<CustomField>
    <fullName>Usage_Meter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usage Meters generate usage that does not get billed, which is useful when to transform between units of measure, or for reporting purposes.</description>
    <inlineHelpText>Usage Meters generate usage that does not get billed, which is useful when to transform between units of measure, or for reporting purposes.</inlineHelpText>
    <label>Usage Meter</label>
    <type>Checkbox</type>
</CustomField>